# whatif

./: .gitignore  README.md  package.json  project.yaml  skills-lock.json
.studio/projects/default/decisions/: decision_000.yaml
.studio/projects/default/script/: original.fountain  parsed.json
.studio/projects/default/timelines/: main.yaml
.studio/projects/default/world/: timeline.yaml
backend/: main.py  pyproject.toml  requirements.txt  run_whatif_api.sh  test_whatif_endpoint.py  whatif_api.py  whatif_scene_api.py
backend/ingestion/: __init__.py  cli.py  commit.py  config.py  envision.py  extract.py  index.py  infer.py  parse.py  schemas.py
docs/: asset-placement-plan.md  ingestion.md  research-character-glb-3d-view.md  scene-config.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  StudioApp.tsx  index.css
frontend/src/components/: WhatIfPanel.tsx
frontend/src/components/studio/: BabylonSceneViewer.tsx  BauhausLogo.tsx  CharacterCard.tsx  CharacterDetailPanel.tsx  CharacterDialoguePanel.tsx  ConfidenceBadge.tsx  GitTreeVisualization.tsx  SceneSelector.tsx  StoryboardGenerator.tsx  WhatIfExplorer.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  tabs.tsx  textarea.tsx
frontend/src/hooks/: useCharacterDialogue.ts  useCharacterGallery.ts  useWhatIf.ts
frontend/src/lib/studio/: constants.ts  data-loader.ts  types.ts
frontend/src/pages/: CharacterGalleryPage.tsx  SceneDetailPage.tsx  SceneSelectPage.tsx  UploadPage.tsx
pipeline/prompts/: envision_system.txt
src/lib/studio/: types.ts
(+2 files in other folders)
